--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpel.resx
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpel.resx
@@ -117,4 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="utilPlacaBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFRUAAAEACAB0BgAAFgAAACgAAAAVAAAAKgAAAAEACAAAAAAA+AEAAAAAAAAAAAAAAAEAAAAB
+        AAAAAAAAMwAAAGYAAACZAAAAzAAAAP8AAAAAKwAAMysAAGYrAACZKwAAzCsAAP8rAAAAVQAAM1UAAGZV
+        AACZVQAAzFUAAP9VAAAAgAAAM4AAAGaAAACZgAAAzIAAAP+AAAAAqgAAM6oAAGaqAACZqgAAzKoAAP+q
+        AAAA1QAAM9UAAGbVAACZ1QAAzNUAAP/VAAAA/wAAM/8AAGb/AACZ/wAAzP8AAP//AAAAADMAMwAzAGYA
+        MwCZADMAzAAzAP8AMwAAKzMAMyszAGYrMwCZKzMAzCszAP8rMwAAVTMAM1UzAGZVMwCZVTMAzFUzAP9V
+        MwAAgDMAM4AzAGaAMwCZgDMAzIAzAP+AMwAAqjMAM6ozAGaqMwCZqjMAzKozAP+qMwAA1TMAM9UzAGbV
+        MwCZ1TMAzNUzAP/VMwAA/zMAM/8zAGb/MwCZ/zMAzP8zAP//MwAAAGYAMwBmAGYAZgCZAGYAzABmAP8A
+        ZgAAK2YAMytmAGYrZgCZK2YAzCtmAP8rZgAAVWYAM1VmAGZVZgCZVWYAzFVmAP9VZgAAgGYAM4BmAGaA
+        ZgCZgGYAzIBmAP+AZgAAqmYAM6pmAGaqZgCZqmYAzKpmAP+qZgAA1WYAM9VmAGbVZgCZ1WYAzNVmAP/V
+        ZgAA/2YAM/9mAGb/ZgCZ/2YAzP9mAP//ZgAAAJkAMwCZAGYAmQCZAJkAzACZAP8AmQAAK5kAMyuZAGYr
+        mQCZK5kAzCuZAP8rmQAAVZkAM1WZAGZVmQCZVZkAzFWZAP9VmQAAgJkAM4CZAGaAmQCZgJkAzICZAP+A
+        mQAAqpkAM6qZAGaqmQCZqpkAzKqZAP+qmQAA1ZkAM9WZAGbVmQCZ1ZkAzNWZAP/VmQAA/5kAM/+ZAGb/
+        mQCZ/5kAzP+ZAP//mQAAAMwAMwDMAGYAzACZAMwAzADMAP8AzAAAK8wAMyvMAGYrzACZK8wAzCvMAP8r
+        zAAAVcwAM1XMAGZVzACZVcwAzFXMAP9VzAAAgMwAM4DMAGaAzACZgMwAzIDMAP+AzAAAqswAM6rMAGaq
+        zACZqswAzKrMAP+qzAAA1cwAM9XMAGbVzACZ1cwAzNXMAP/VzAAA/8wAM//MAGb/zACZ/8wAzP/MAP//
+        zAAAAP8AMwD/AGYA/wCZAP8AzAD/AP8A/wAAK/8AMyv/AGYr/wCZK/8AzCv/AP8r/wAAVf8AM1X/AGZV
+        /wCZVf8AzFX/AP9V/wAAgP8AM4D/AGaA/wCZgP8AzID/AP+A/wAAqv8AM6r/AGaq/wCZqv8AzKr/AP+q
+        /wAA1f8AM9X/AGbV/wCZ1f8AzNX/AP/V/wAA//8AM///AGb//wCZ//8AzP//AP///wAAAAAAAAAAAAAA
+        AAAAAAAA+/v7+/v7+/TtvLbDxPT7+/v7+/v7AAAA+/v7++62r35+fqh+fn6Mw/v7+/v7AAAA+/v7w66o
+        qa6pr4Wpf39+foz7+/v7AAAA+/u9qKmvrqmvqKm1wOu1tH6F+/v7AAAA++2or66pr6+ptfHx8ffx8eu6
+        tvv7AAAA+6+or6ivqKi66urA6/HH9+vrwMP7AAAA9Kior6+vqLbz9PTywPDxzffr6vL7AAAAtqivrqmu
+        r/r7+/v78+r38ffxwfD7AAAAqa6pr6+otvv7+/v7+8/r98f36+r6AAAAqa+ur6mo9Pv7+/v7+/rw9/H3
+        x+r5AAAArq+prq+oxPv7+/v7+/rxx/f38er5AAAAqK+uqa+o9Pv7+/v7+/vG8ffxx+r5AAAAqa+prq+o
+        vfv7+/v7+/Pw9/H38er6AAAAtaivqa+o2fv7+/v7+vHxx/fH6/D6AAAAw6ivrtmuqOz6+/r568bx9/fx
+        6vH7AAAA+6io2a+v367l6+rB6vHxzevrwO37AAAA++eur9+03t+05fHqx/D38evqtfX7AAAA+/vgrt/l
+        td+02LXr8fG75bSp9fv7AAAA+/v7vN605eTltdmvqamoqKn0+/v7AAAA+/v7++3ltN602LTSqKiovfr7
+        +/v7AAAA+/v7+/v7+u3s5t+17e77+/v7+/v7AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
