--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Resources.resx
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Resources.resx
@@ -193,4 +193,7 @@
   <data name="_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Terpel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\terpel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
