Crea obj documento

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpel.resx
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpel.resx
@@ -189,6 +189,9 @@
   <metadata name="ventasFlotaDetalleBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>847, 14</value>
   </metadata>
+  <metadata name="documentosBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1077, 14</value>
+  </metadata>
   <metadata name="dlgOpenDir.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>614, 14</value>
   </metadata>
